mediawiki (1:1.27.4-2) UNRELEASED; urgency=medium

  * Bump Standards-Version to 4.1.1
  * Set Rules-Requires-Root: no
  * Remove unused lintian overrides
  * Upgrade php-apcu to a Recommends
  * Use debhelper compat 10

 -- Kunal Mehta <legoktm@member.fsf.org>  Tue, 21 Nov 2017 18:34:50 -0800

mediawiki (1:1.27.4-1) unstable; urgency=medium

  * Imported Upstream version 1.27.4 (security release), fixing
    CVE-2017-8809, CVE-2017-8810, CVE-2017-8808, CVE-2017-8811,
    CVE-2017-8812, CVE-2017-8814, CVE-2017-8815.
  * Users who used the default configuration should not be affected
    by CVE-2017-9841, but an extra .htaccess file will restrict
    web access to the vendor/ directory.

 -- Kunal Mehta <legoktm@member.fsf.org>  Tue, 14 Nov 2017 15:52:47 -0800

mediawiki (1:1.27.3-1) unstable; urgency=medium

  * Imported Upstream version 1.27.3 (security release), that
    actually contains the fix for CVE-2017-0372 (Closes: #861585)

 -- Kunal Mehta <legoktm@member.fsf.org>  Mon, 01 May 2017 13:20:11 -0700

mediawiki (1:1.27.2-1) unstable; urgency=medium

  * Improve NEWS file (Closes: #852862, #854352)
  * Imported Upstream version 1.27.2 (security release), fixing
    CVE-2017-0363, CVE-2017-0364, CVE-2017-0365, CVE-2017-0361,
    CVE-2017-0362, CVE-2017-0368, CVE-2017-0366, CVE-2017-0370,
    CVE-2017-0369, CVE-2017-0367

 -- Kunal Mehta <legoktm@member.fsf.org>  Thu, 06 Apr 2017 14:04:24 -0700

mediawiki (1:1.27.1-3) unstable; urgency=medium

  * Ensure mediawiki depends upon the same version of mediawiki-classes
  * Add powered by Debian icon in footer
  * Add NEWS for major version upgrade (Closes: #838965)
  * Add README for mediawiki-classes
  * Add RELEASE-NOTES-* as documentation for mediawiki
  * Recommend default-mysql-server | virtual-mysql-server instead of
    just mysql-server (Closes: #843994, #848441)
  * Use bundled jQuery (version 1) instead of Debian's jQuery, which is
    now the incompatible version 3