@@ -50,5 +50,15 @@ override_dh_installdeb:
 	find debian/mediawiki -depth \( -name ".cvsignore" -o -name ".gitignore" -o -name ".arch-ids" \) -exec rm -rf {} \;
 	dh_installdeb
 
+override_dh_systemd_enable:
+	# Do not enable by default, the user needs to manually
+	# configure MediaWiki first.
+	dh_systemd_enable --no-enable --name=mediawiki-jobrunner
+
+override_dh_installinit:
+	# We only have a systemd unit, not sysvinit.
+	# Can be removed in debhelper compat 11
+	dh_installinit -Nmediawiki
+
 %:
 	dh $@ --with apache2
